Author changes, cosmetics

--- a/oszdb.tex
+++ b/oszdb.tex
@@ -11,20 +11,13 @@
 \hypersetup{linkbordercolor=1 1 1}
 \pagestyle{headings}
 
+\author{Michał Bugno \and Antek Piechnik}
 \title{Wykłady z OSZBD}
 
 \begin{document}
 \maketitle
-\newpage
 \tableofcontents
 \newpage
-
-\section{Autorzy}
-\begin{itemize}
-\item dr Robiert Marcjan -- prowadzenie wykładu
-\item Michał Bugno -- \LaTeX, treść
-\item Antek Piechnik -- treść
-\end{itemize}
 
 \section{Wstęp}
 \subsection{Literatura}
